monitoring/blackbox/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blackbox-exporter-prometheus-only
  namespace: monitoring
  labels:
    app.kubernetes.io/part-of: buet-paas-monitoring
    app.kubernetes.io/component: blackbox-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter
      app.kubernetes.io/instance: blackbox-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              operator.prometheus.io/name: monitoring-stack-kube-prom-prometheus
      ports:
        - protocol: TCP
          port: 9115
